<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/General.Background"
    tools:context=".FutureTripCreate">

    <TextView
        android:id="@+id/trip_creator_label"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="@string/trip_configure"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow_to_home" />

    <ImageButton
        android:id="@+id/back_arrow_to_home"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/sign_in_start_margin"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/new_trip_creator"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_of_bg_maker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_top_margin"
        android:layout_marginHorizontal="10dp"
        android:paddingBottom="16dp"
        android:background="@drawable/background_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_creator_label">

        <TextView
            android:id="@+id/nav_header_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            style="@style/TextView.Secondary"
            android:text="@string/background_image"
            android:textSize="28sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_of_bg_maker"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="11dp"
            app:cardElevation="11dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_header_label">


            <ImageView
                android:id="@+id/background_preview_future"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/destination_img"
                android:src="@drawable/barcelona" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/photo_snap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/shape_bg"
        android:clickable="true"
        android:contentDescription="@string/destination_img"
        android:focusable="true"
        android:src="@drawable/ic_photo_camera"
        app:layout_constraintBottom_toBottomOf="@+id/card_of_bg_maker"
        app:layout_constraintEnd_toEndOf="@+id/card_of_bg_maker" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/gallery_bnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/shape_bg"
        android:clickable="true"
        android:contentDescription="@string/destination_img"
        android:focusable="true"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintBottom_toBottomOf="@+id/card_of_bg_maker"
        app:layout_constraintStart_toStartOf="@+id/card_of_bg_maker" />

    <TextView
        android:id="@+id/trip_creator_label2"
        style="@style/TextView.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_top_margin"
        android:layout_marginHorizontal="@dimen/sign_in_start_margin"
        android:text="@string/travel_information"
        android:textSize="26sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_of_bg_maker" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/destination_place"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/login_horizontal_margin"
        android:layout_marginTop="@dimen/login_top_margin"
        android:background="@drawable/background_card"
        android:hint="@string/destination_place"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/login_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_creator_label2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/trip_start_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/login_top_margin"
        android:layout_marginHorizontal="@dimen/login_horizontal_margin"
        android:background="@drawable/background_card"
        android:drawableEnd="@drawable/ic_calendar"
        android:drawablePadding="@dimen/login_drawable_padding"
        android:hint="@string/trip_start_date"
        android:maxLines="1"
        android:ems="10"
        android:inputType="date"
        android:paddingHorizontal="@dimen/login_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination_place" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/trip_end_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/login_top_margin"
        android:layout_marginHorizontal="@dimen/login_horizontal_margin"
        android:background="@drawable/background_card"
        android:drawableEnd="@drawable/ic_calendar"
        android:drawablePadding="@dimen/login_drawable_padding"
        android:ems="10"
        android:hint="@string/trip_end_date"
        android:inputType="date"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/login_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_start_date" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sign_in_start_margin"
        android:layout_marginBottom="@dimen/login_top_margin"
        android:background="@drawable/button_bg"
        style="@style/Button.Forms"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>